--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,5 @@
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=testdb
-spring.data.mongodb.uri-test=mongodb://localhost/learning
+spring.data.mongodb.uri=mongodb://localhost:27017/movie-rental-test
+spring.data.mongodb.database=movie-rental-test
